- improve compile error output for cases when the highlight has 0 length - revision 0.1.0